# cert-issuer

./: AGENTS.md  CLAUDE.md  Cargo.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
cert-issuer-web/: README.md  index.html  package-lock.json  package.json
cert-issuer-web/src/: App.vue
cert-issuer-web/src/assets/: styles.css
cert-issuer-web/src/router/: index.ts
cert-issuer-web/src/services/: api.ts
cert-issuer-web/src/views/: CertificateDetail.vue  CertificateIssue.vue  CertificateList.vue  Dashboard.vue
src/: main.rs
src/api/: certificate.rs  health.rs  mod.rs
src/core/: ca.rs  issuer.rs  key_manager.rs  mod.rs
src/models/: certificate.rs  mod.rs
src/storage/: sqlite.rs
src/utils/: config.rs  crypto.rs  error.rs  mod.rs
src/web/: mod.rs  static_files.rs
