[package]
name = "cert-issuer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tokio = { version = "1", features = ["full"] }

# Certificate operations
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = "0.22"
x509-parser = "0.16"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
clap = { version = "4", features = ["derive"] }
config = "0.14"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
hex = "0.4"
md5 = "0.7"
time = "0.3"
num-traits = "0.2"

# Async
once_cell = "1"
rand = "0.8"
bytes = "1"

# PKCS12/PFX generation - use p12 crate
p12 = "0.5"
pem = "3"
der = "0.7"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[features]
default = []